// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Create form Form should render correctly 1`] = `
<div
  className="sc-gzVnrw kFjkBp"
>
  <div
    className="sc-htoDjs cFfunZ"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="username"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-ifAKCX hBHdQq"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="email"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-ifAKCX hBHdQq"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="firstName"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          First name
        </span>
        <input
          className="sc-ifAKCX hBHdQq"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="lastName"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Last name
        </span>
        <input
          className="sc-ifAKCX hBHdQq"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <button
        className="sc-EHOje ihKsGU"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth Create form Form should render correctly with groups 1`] = `
<div
  className="sc-gzVnrw kFjkBp"
>
  <div
    className="sc-htoDjs cFfunZ"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="username"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-ifAKCX hBHdQq"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="email"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-ifAKCX hBHdQq"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="firstName"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          First name
        </span>
        <input
          className="sc-ifAKCX hBHdQq"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="lastName"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Last name
        </span>
        <input
          className="sc-ifAKCX hBHdQq"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="groupCode"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Select group
        </span>
        <select
          className="sc-dnqmqq dqEzVR"
          id="groupCode"
          name="groupCode"
          onChange={[Function]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="GROUP_1_option"
            value="GROUP_1"
          >
            Group 1
          </option>
          <option
            data-qa="GROUP_2_option"
            value="GROUP_2"
          >
            Group 2
          </option>
          <option
            data-qa="GROUP_3_option"
            value="GROUP_3"
          >
            Group 3
          </option>
        </select>
      </label>
      <button
        className="sc-EHOje ihKsGU"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;
